# Hey-Bujji

./: README.md
bujji/: README.md  pyproject.toml
bujji/src/: __init__.py
bujji/src/bujji/: __init__.py  crew.py  main.py
bujji/src/bujji/config/: agents.yaml  tasks.yaml
